# stardust-client-tests-cpp

./: .buildconfig  .gitignore  README.md  meson.build
create_model/: meson.build
create_model/src/: create_model.cpp
fields/: meson.build
fields/src/: fields.cpp
include/: debug.hpp  fusion.hpp  math_util.hpp  mediaplayer.hpp
include/flatbuffers/: Input_generated.h  PointerInput_generated.h  common_generated.h
lifecycle/: meson.build
lifecycle/src/: lifecycle.cpp
mesh_scale/: meson.build
mesh_scale/src/: mesh_scale.cpp
realsense-hmd/: meson.build
realsense-hmd/src/: realsense-client.cpp
res/: axes.blend  axes.blend1  axes.glb  discord_panel.blend  discord_panel.blend1  discord_panel.glb  dome.blend  dome.blend1  meson.build  realitycomposer.glb  touch_dome.glb
res/environments/: DefaultEnvironment.glb  meson.build
res/floor/: floor.blend  floor.blend1  floor.glb  meson.build  square_floor.glb  square_floor.gltf
res/hexy/: meson.build
res/item/: crt.blend  crt.blend1  crt.glb  environmentitemacceptor.blend  environmentitemacceptor.blend1  environmentitemacceptor.glb  floppydisk.blend  floppydisk.blend1  floppydisk.glb  meson.build  panelitem.blend  panelitem.blend1  panelitem.glb  scrollpanel.blend  scrollpanel.blend1  scrollpanel.glb  scrollpanelhandle.glb  skyball.glb  skyball.hpp
res/mediaplayer/: body.glb  mediaplayer.blend  mediaplayer.blend1  meson.build
res/panelshell/: meson.build
res/panelshell/crt/: license.txt  scene.gltf
res/slider/: base.glb  base_inv.glb  meson.build  orb.glb  pincher.glb  slider.blend  slider.blend1
res/workspaces/: cell.glb  divider.glb  workspaces.blend  workspaces.blend1
set_values/: meson.build
set_values/src/: set_position.cpp  set_rotation.cpp
simple_input_handler/: meson.build
simple_input_handler/src/: simple_input_handler.cpp
src/: axes.cpp  basicbody.cpp  create_model.cpp  directactions.cpp  environmentitem.cpp  environmentitem_selfimpl.cpp  environmentitemspawner.cpp  environmentitemui.cpp  fields.cpp  floor.cpp  forcegrab.cpp  hostkeyboard.cpp  input.cpp  inputactions.cpp  inputbenchmark.cpp  mediaplayer.cpp  observatory.cpp  panelshell.cpp  panelui.cpp  patternlock.cpp  screen.cpp  scrollpanel.cpp  slider.cpp  softcontact.cpp  workspaces.cpp  xinteract.cpp
src/dbus/: meson.build  player.cpp  player.hpp
src/interaction/: button.cpp  button.hpp  contactable.cpp  contactable.hpp  enhancedinputhandler.cpp  enhancedinputhandler.hpp  exclusivepinch.cpp  exclusivepinch.hpp  grabbable.cpp  grabbable.hpp  inputactionhandler.cpp  inputactionhandler.hpp  mediaplayer.cpp  mediaplayer.hpp  meson.build  screen.cpp  screen.hpp  slider.cpp  slider.hpp  xinteract.cpp  xinteract.hpp
src/item/: acceptor.hpp  environmentitem.cpp  environmentitem.hpp  item.cpp  item.hpp  meson.build  panel.cpp  panel.hpp
src/physics/: meson.build  physicsbody.cpp  physicsbody.hpp
